// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Button Should generate correct button on 'Action' change 1`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "negative",
    "label": "Sas",
    "payload": Object {
      "action": "SAS ACTION",
      "command": undefined,
    },
  },
}
`;

exports[`Text Button Should generate correct button on 'Action' change 2`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "negative",
    "label": "Sas",
    "payload": Object {
      "action": "SAS ACTION",
      "command": undefined,
    },
  },
}
`;

exports[`Text Button Should work with parameters 1`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "negative",
    "label": "Super sus",
    "payload": Object {
      "action": undefined,
      "command": undefined,
    },
  },
}
`;

exports[`Text Button Should work without parameters 1`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "negative",
    "label": "Sas",
    "payload": Object {
      "action": undefined,
      "command": undefined,
    },
  },
}
`;
